src/components/SoftwareComponents/CardSection.css
.software-card-section-image-wrapper {
  z-index: -1;
}

.software-card-section-content-wrapper {
  margin-left: -25%;
}

.software-card-section-content-wrapper:hover .card {
  background-color: #5912e4;
  color: white;
}

.software-card-section-title {
  font-weight: 900;
  font-size: 58px;
  line-height: 50px;
}

.software-card-section-text {
  font-weight: 300;
  font-size: 20px;
  line-height: 28px;
}

.software-card-section-content-wrapper-two {
  margin-left: 10%;
}

.software-card-section-content-wrapper-two:hover .card {
  background-color: #5912e4;
  color: white;
}

.software-card-section-image-wrapper-two {
  margin-left: -10%;
  z-index: -1;
}

.software-btn {
  background: #a1f157;
  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
  color: #5912e4;
}

.software-svg-icon {
  fill: #5912e4;
}

.software-btn:hover {
  color: #a1f157;
  background-color: transparent;
  outline: solid #a1f157;
  transition: 0.3s ease-in-out;
}

.software-btn:hover .software-svg-icon {
  fill: #a1f157;
}

@media screen and (max-width: 768px) {
  .software-card-section-content-wrapper {
    margin-left: 0;
  }
  .software-card-section-content-wrapper-two {
    margin-left: 0;
  }
  .software-card-section-image-wrapper-two {
    margin-left: 0;
  }
}

@media screen and (max-width: 991px){
  .software-card-section-title {
    font-size: 30px;
  }
  .software-card-section-text {
    font-size: 16px;
    line-height: 28px;
  }
  .section-one {
    order: 1;
  }
  .section-two {
    order: 2;
  }
}

